--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "prod": "NODE_ENV=production node server.js"
+    "prod": "NODE_ENV=production node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^2.4.3", 
     "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "express-rate-limit": "^6.10.0",
@@ -21,7 +22,17 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["helpdesk", "express", "mongodb", "jwt"],
-  "author": "",
-  "license": "MIT"
+  "keywords": [
+    "helpdesk", 
+    "ticketing", 
+    "express", 
+    "mongodb", 
+    "jwt",
+    "api"
+  ],
+  "author": "Sundaram Upadhyay",
+  "license": "MIT",
+  "engines": {
+    "node": ">=14.0.0"
+  }
 }
